--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,5 +10,5 @@ jobs:
       - name: Run k6 local test
         uses: grafana/k6-action@v0.2.0
         with:
-          filename: k6-echo-test.js
+          filename: sample-smoke-test.js
           flags: --vus 2 --duration 10s
